# hollow

./: Cargo.toml  README.md  output.md
src/: lib.rs  main.rs  prompt.rs  random.rs  utils.rs
